--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/node": "^20.3.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"prisma": "^4.16.2",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.1.6",
 		"vite": "^4.3.6"
 	},
 	"type": "module"
