--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"typescript": "^5.1.6",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^4.16.2"
+	}
 }
