--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@event-calendar/core": "^1.5.0",
+		"@event-calendar/interaction": "^1.5.0",
+		"@event-calendar/time-grid": "^1.5.0",
 		"@prisma/client": "^4.16.2",
 		"argon2": "^0.30.3",
 		"svelte-kit-cookie-session": "^3.4.1"
