--- a/package.json
+++ b/package.json
@@ -12,27 +12,26 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.3",
-		"@types/node": "^20.4.4",
-		"@typescript-eslint/eslint-plugin": "^6.2.0",
-		"@typescript-eslint/parser": "^6.2.0",
-		"eslint": "^8.45.0",
-		"eslint-plugin-svelte": "^2.32.4",
-		"prisma": "^5.0.0",
-		"svelte": "^4.1.1",
-		"svelte-check": "^3.4.6",
+		"@sveltejs/kit": "^1.24.1",
+		"@types/node": "^20.5.9",
+		"@typescript-eslint/eslint-plugin": "^6.6.0",
+		"@typescript-eslint/parser": "^6.6.0",
+		"eslint": "^8.48.0",
+		"eslint-plugin-svelte": "^2.33.0",
+		"prisma": "^5.2.0",
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.1",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.6.1",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.7"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@event-calendar/core": "^1.5.0",
-		"@event-calendar/interaction": "^1.5.0",
-		"@event-calendar/time-grid": "^1.5.0",
-		"@prisma/client": "^5.0.0",
-		"argon2": "^0.30.3",
-		"svelte-kit-cookie-session": "^3.4.1"
+		"@event-calendar/core": "^2.3.2",
+		"@event-calendar/interaction": "^2.3.2",
+		"@event-calendar/time-grid": "^2.3.2",
+		"@prisma/client": "^5.2.0",
+		"argon2": "^0.31.1"
 	}
 }
