--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"@event-calendar/interaction": "^2.3.3",
 		"@event-calendar/time-grid": "^2.3.3",
 		"@prisma/client": "^5.3.1",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"argon2": "^0.31.1",
+		"dotenv": "^16.3.1",
 		"kysely": "^0.26.3",
 		"pg": "^8.11.3",
 		"prisma-kysely": "^1.7.1"
