--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.25.1",
 		"@types/node": "^20.8.0",
 		"@types/pg": "^8.10.3",
@@ -20,6 +20,7 @@
 		"eslint": "^8.50.0",
 		"eslint-plugin-svelte": "^2.33.2",
 		"prisma": "^5.3.1",
+		"prisma-kysely": "^1.7.1",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"ts-node": "^10.9.1",
@@ -33,12 +34,10 @@
 		"@event-calendar/interaction": "^2.3.3",
 		"@event-calendar/time-grid": "^2.3.3",
 		"@prisma/client": "^5.3.1",
-		"@sveltejs/adapter-node": "^1.3.1",
 		"argon2": "^0.31.1",
 		"dotenv": "^16.3.1",
 		"kysely": "^0.26.3",
 		"lucide-svelte": "^0.284.0",
-		"pg": "^8.11.3",
-		"prisma-kysely": "^1.7.1"
+		"pg": "^8.11.3"
 	}
 }
