--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.26.0",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^20.8.7",
 		"@types/pg": "^8.10.7",
 		"@typescript-eslint/eslint-plugin": "^6.8.0",
@@ -26,7 +27,7 @@
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.5.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
